# tpsa

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  _config.yml  readme.md
.github/: CONTRIBUTING.md
.github/workflows/: doxygen.yml  draft-pdf.yml  jekyll.yml
cbp/: tpsa_dll.cbp  tpsa_lib.cbp
cbp/doxygen/: doxyfile
cbp/doxygen/html/: annotated.html  annotated_dup.js  classes.html  da_8h.js  da_8h_source.html  files.html  functions_func.html  globals.html  index.html  menudata.js  navtreeindex0.js  struct_base.js  struct_d_a_vector-members.html  struct_d_a_vector.js  tpsa__extend_8cc.js  tpsa__extend_8h_source.html
debug/: da_output.txt  debug.cbp  debug.cc
doc/: Doxyfile  tpsa_memory_management.eps
doc/doxygen/: doxyfile
doc/doxygen/html/: _c_make_c_x_x_compiler_id_8cpp.html  _l_i_c_e_n_s_e_8md.html  annotated.html  class_a_d_order_table-members.html  class_a_d_order_table.html  class_a_d_order_table.js  classes.html  da_8cc.html  da_8cc.js  da_8cc_source.html  da_8h.html  da_8h.js  da_8h_source.html  dir_0030442c80144dbed9c11edc4c864852.html  dir_00690e72318e37894add3552460182a1.html  dir_00edd443575bf2fdf490b5c0ebf37412.html  dir_00ef2ca2275b7f23f4acd2b3eb24d177.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_04c34976416731275672b309c3f7adcd.html  dir_06d46081ecd55f66bdd579f80b41114a.html  dir_0712a083a26336d696af027145240816.html  dir_071dd97546e23b02efca658df99dd462.html  dir_087ee9287c117ab1c0405b0bd40910e9.html  dir_09f5ebf6c8425414380b316f673b1ec1.html  dir_0ae287d01d00efe9b1a6ae38ba41ca24.html  dir_0bfc809f3a3cec67aaa44d4fcd219b40.html  dir_0c1764074599b1b440b9b60f320cd8de.html  dir_0c6a9b55269e6ba1d7ad63ed6702c971.html  dir_0c966333e3c54b86a22bb8f233b09d0c.html  dir_0e1732faf6e151a23e90c6d6981d4970.html  dir_0f371ec518742f80a4c58e9da7787580.html  dir_10cb7fa3a6af2462733757ccaed0b1ec.html  dir_1200d9304177c5ecee8a0afe41444d26.html  dir_122e8ed1cd1e613664d6250849ba3771.html  dir_132f025f60b0e4619b42753a765d4665.html  dir_15200583daea43f13e77cfdc42efd685.html  dir_196e020855aee35a4bdac8663b539efb.html  dir_19743e0c56e8e20c2b394c08a3e114f9.html  dir_1a883e4bd88862f53efc9214711d9ba6.html  dir_1c20e0db34585ecc9a55df85a5e8ae5e.html  (+518 more)
doc/doxygen/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  _l_i_c_e_n_s_e_8md.tex  annotated.tex  class_a_d_order_table.tex  da_8cc.tex  da_8h.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_9837c2e456980333ce77846566c124a2.tex  dir_b1a1bc6d8ca2a8ef6dfab6287ec4b4a3.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  examples_8cc.tex  files.tex  md__e___work__code_tpsa_lib__l_i_c_e_n_s_e.tex  md__e___work__code_tpsa_lib_node_modules__babel_code_frame__r_e_a_d_m_e.tex  md__e___work__code_tpsa_lib_node_modules__babel_helper_validator_identifier__r_e_a_d_m_e.tex  md__e___work__code_tpsa_lib_node_modules__babel_highlight__r_e_a_d_m_e.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_config_validator_license.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load__r_e_a_d_m_e.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_ansi_styles_readme.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_chalk_readme.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_color_convert__c_h_a_n_g_e_l_o_g.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_color_convert__r_e_a_d_m_e.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_has_flag_readme.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_load_node_modules_supports_color_readme.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_types_node_modules_ansi_styles_readme.tex  md__e___work__code_tpsa_lib_node_modules__commitlint_types_node_modules_chalk_readme.tex  md__e___work__code_tpsa_lib_node_modules__jridgewell_resolve_uri__r_e_a_d_m_e.tex  (+224 more)
examples/: Makefile  example_complex_da.cc  examples.cc
include/: da.h  tpsa.h  tpsa_extend.h
julia-wrapper/: CMakeLists.txt  examples.jl  julia-wrapper.cc
paper/: compile  paper.bib  paper.md
python-wrapper/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml  readme.md
python-wrapper/examples/: 01_single_variable_da_calculation.py  02_multi_variable_da_calculation.py  03_substitute.py  04_composition.py  05_save_a_da_vector_to_file.py  06_complex_da.py  07_save_load_a_da_vector.py  08_assess_an_element_in_a_da_vector.py  09_differentiation_integration.py
python-wrapper/src/: tpsa_python.cc
python-wrapper/src/tpsa/: __init__.py
python-wrapper/tests/: tests.py
scr/: da.cc  tpsa.cpp  tpsa_extend.cc
src/: da.cc  tpsa.cpp  tpsa_extend.cc
test/: Makefile  bunch_substitution_0.txt  bunch_substitution_1.txt  bunch_substitution_2.txt  cd_calculation_0.txt  cd_calculation_1.txt  cd_calculation_2.txt  cd_calculation_3.txt  cd_composition_cd_0.txt  cd_composition_cd_1.txt  cd_composition_da_0.txt  cd_composition_da_1.txt  cd_output.txt  da_composition_0.txt  da_composition_1.txt  da_composition_2.txt  da_composition_cd_0.txt  da_composition_cd_1.txt  da_der.txt  da_fundamental.cc  da_int.txt  da_output.txt  exp_da.txt  log_da.txt  pow0p3_da.txt  pow3_da.txt  sqrt_da.txt  substitute_da_vector.txt  substitute_multiple_da_vectors.txt  substitute_number.txt  test.cbp  test.cc  tests.cc
web/: readme.md
web/html/: annotated.html  annotated_dup.js  class_a_d_order_table.html  classes.html  da_8cc.html  da_8cc.js  da_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions_vars.html  globals_a.html  globals_func.js  globals_func_a.html  globals_func_c.html  globals_func_g.html  globals_func_o.html  globals_func_r.html  globals_func_t.html  globals_i.html  globals_l.html  globals_o.html  globals_p.html  globals_t.html  globals_vars.html  index.html  navtreedata.js  navtreeindex1.js  struct_base-members.html  struct_base.js  struct_d_a_vector.html  tpsa__extend_8cc.html  tpsa__extend_8cc.js  tpsa__extend_8h.js  tpsa__extend_8h_source.html
(+144 files in other folders)
