[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "tpsa"
version = "1.0.0"
description="Python wrapper for cppTPSA (with pybind11)"
readme = "README.md"
authors = [
  { name = "He Zhang", email = "hezhang@jlab.org" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

